--- a/app/src/main/res/layout/activity_quiz.xml
+++ b/app/src/main/res/layout/activity_quiz.xml
@@ -49,7 +49,7 @@
                 android:id="@+id/timer"
                 android:text="00:59"
                 android:textStyle="bold"
-                android:textColor="@color/white"/>
+                android:textColor="#3F51B5"/>
         </LinearLayout>
 
     </RelativeLayout>
